--- a/package.json
+++ b/package.json
@@ -1,22 +1,14 @@
 {
-  "name": "front-end",
+  "name": "my-react-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.2.2",
-    "chart.js": "^3.9.1",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.5.0",
-    "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.6.0",
-    "react-router": "^6.4.2",
-    "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
-    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
